@@ -1,5 +1,11 @@
 2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/troff/input.cpp (get_color_element): Rename this...
+	(read_color_channel_value): ...to this.
+	(read_rgb, read_cmy, read_cmyk, read_gray): Update call sites.
+
+2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/troff/input.cpp (get_char_for_escape_parameter):
 	Rename this...
 	(read_char_in_escape_sequence_parameter): ...to this.
